--- a/login_page/package.json
+++ b/login_page/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:3001",
   "name": "login_page",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
