--- a/login_page/package.json
+++ b/login_page/package.json
@@ -14,6 +14,7 @@
     "http": "^0.0.1-security",
     "http-proxy-middleware": "^2.0.6",
     "mysql": "^2.18.1",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
